--- a/ALTC-Site/Areas/Admin/Views/Request/Index.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Request/Index.cshtml
@@ -1,9 +1,8 @@
-﻿@using ALTC_Website.ViewModels
-﻿
-@model List<RequestVM>
+﻿﻿
+@model List<Request>
 
 @{
-    
+
     ViewData["Title"] = "Index";
     int i = 1;
 }
@@ -21,15 +20,17 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (RequestVM request in Model)
+            @foreach (Request request in Model)
             {
                 <tr>
                     <th scope="row">@(i++)</th>
                     <td>@request.Name</td>
                     <td>@request.Phone</td>
                     <td>@request.Email</td>
+                    <td>@request.FileName</td>
+
                     <td>
-                        <a asp-controller="Request" asp-action="" class="btn btn-primary">Download </a>
+                        <a asp-controller="Request" asp-action="Download" asp-route-FileName="@request.FileName" class="btn btn-primary">Download </a>
                     </td>
                 </tr>
 
