--- a/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -246,6 +246,17 @@
                             </a>
                             </li>
                         <li class="nav-item">
+
+                            <a href="~/Admin/Complain/Index" class="nav-link">
+                                <i class="nav-icon far fa-image" style="color:dodgerblue"></i>
+
+
+                                <p>
+                                    Complain
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a asp-action="GetAll" asp-controller="StaticData" asp-area="Admin" class="nav-link">
                                 <i class="nav-icon far fa-envelope" style="color:dodgerblue"></i>
 
