--- a/ALTC-Site/wwwroot/owl-carousel/owl.theme.css
+++ b/ALTC-Site/wwwroot/owl-carousel/owl.theme.css
@@ -3,13 +3,15 @@
  * Copyright 2013-2017 David Deutsch
  * Licensed under  ()
  */
+
 /*
  * 	Default theme - Owl Carousel CSS File
  */
 .owl-theme .owl-nav {
-  margin-top: 10px;
-  text-align: center;
-  -webkit-tap-highlight-color: transparent; }
+    margin-top: 10px;
+    text-align: center;
+    -webkit-tap-highlight-color: transparent;
+}
   .owl-theme .owl-nav [class*='owl-'] {
     color: #FFF;
     font-size: 14px;
