--- a/ALTC-Site/Areas/Admin/Views/Request/Index.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Request/Index.cshtml
@@ -7,9 +7,15 @@
     int i = 1;
 }
 
-<div class="container">
-    <h1 class="my-4">All Requests</h1>
-    <table class="table table-bordered">
+<div class="row py-5 mx-0">
+
+    <div class="col-md-8 offset-md-2">
+        <div class="text-white mb-3">
+            <a asp-action="Create" class="btn btn-success">
+                Add New
+            </a>
+        </div>
+    <table class="table ">
         <thead>
             <tr>
                 <th scope="col">#</th>
@@ -27,10 +33,11 @@
                     <td>@request.Name</td>
                     <td>@request.Phone</td>
                     <td>@request.Email</td>
-                    <td>@request.FileName</td>
-
+                  
                     <td>
-                        <a asp-controller="Request" asp-action="Download" asp-route-FileName="@request.FileName" class="btn btn-primary">Download </a>
+                            <a asp-controller="Request" asp-action="Download" asp-route-FileName="@request.FileName">Download </a>|
+                        <a asp-controller="Request" asp-action="GetDetails" asp-route-Id="@request.id" >Details </a>
+
                     </td>
                 </tr>
 
@@ -38,4 +45,5 @@
 
         </tbody>
     </table>
+</div>
 </div>
