--- a/ALTC-Site/Areas/Admin/Views/Team/Create.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Team/Create.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Add new team member</h1>
+<div class="row text mx-0">
+    <div class="col-md-8 offset-2">
+        <p>
+            <h1>Add a New Team Member</h1>
+        </p>
+        <div class="row mx-0">
+            <div class="col-md-8 offset-2">
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -32,14 +35,19 @@
                 <span asp-validation-for="Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
+                        <input type="submit" value="Create" class="btn btn-primary float-right" />
             </div>
         </form>
+            
+            </div>
+        </div>
     </div>
 </div>
 
+
 <div>
-    <a asp-action="Index">Back to List</a>
+    
 </div>
 
 @section Scripts {
