--- a/ALTC-Site/Views/About/Index.cshtml
+++ b/ALTC-Site/Views/About/Index.cshtml
@@ -1,27 +1,4 @@
-﻿ <!-- Favicons -->
-<link href="~/assets/img/favicon.png" rel="icon">
-<link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-<!-- Vendor CSS Files -->
-<link href="~/assets/vendor/aos/aos.css" rel="stylesheet">
-<link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-<link href="~/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-<link href="~/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-<link href="~/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-<!-- Template Main CSS File -->
-<link href="~/assets/css/style.css" rel="stylesheet">
-
-<div style="margin-top:100px;"></div>
-<!-- ======= Hero Section ======= -->
-
-
-<!-- ======= Featured Services Section ======= -->
-<!-- ======= About Section ======= -->
+﻿
 <section id="about" class="about section-bg">
     <div class="container" data-aos="fade-up">
 
@@ -142,16 +119,23 @@
 
     </div>
 </section><!-- End Services Section -->
+<section id="team-members">
+</section>
+<script>
+    $(document).ready(function () {
+        event.preventDefault();
+        $.ajax({
+            url: "/team/getall",
 
+            success: function (result) {
+                console.log(result);
+                document.getElementById("team-members").innerHTML = result;
+            },
+            error: function (xhr, status, error) {
+                //console.log("kk");
+                console.log(error);
+            }
+        });
 
-<script src="~/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-<script src="~/assets/vendor/aos/aos.js"></script>
-<script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="~/assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="~/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="~/assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="~/assets/vendor/waypoints/noframework.waypoints.js"></script>
-<script src="~/assets/vendor/php-email-form/validate.js"></script>
-
-<!-- Template Main JS File -->
-<script src="~/assets/js/main.js"></script>
+    });
+</script>
