--- a/ALTC-Site/Views/Home/Index_en.cshtml
+++ b/ALTC-Site/Views/Home/Index_en.cshtml
@@ -18,9 +18,105 @@
 
 <div style="margin-top:100px;"></div>
 <!-- ======= Hero Section ======= -->
+<section id="hero" class="d-flex align-items-center">
+    <div class="container" data-aos="zoom-out" data-aos-delay="100">
+        <h1> Arab Leading Technology <span> ALTC</span></h1>
+        <h2>Website and App development solution for transforming and innovating businesses.</h2>
+        <daiv class="d-flex justify-content-center">
+            <a href="/Contact" class="btn-get-started scrollto">Get Started</a>
+        </div>
+    </div>
+</section><!-- End Hero -->
 
 
+
+<footer id="footer">
+
+    <div class="footer-newsletter">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <h4>
+                        Big Ideas, Creative people, New technologies
+                    </h4>
+                
+                    <form action="" method="post">
+                        <input type="email" name="email"><input type="submit" value="Subscribe">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</footer><!-- End Footer -->
 <!-- ======= Featured Services Section ======= -->
+<section id="featured-services" class="featured-services">
+    <div class="container" data-aos="fade-up">
+
+        <div class="row">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                    <div class="icon"><img src="~/img/dev.svg" /></i></div>
+                    <h4 class="title">
+                        <a href="">
+                            Service
+                            Web Development
+                        </a>
+                    </h4>
+                    <p class="description">Web development is the fundamental (back-end) coding of 
+                        your application or your business website, and it is critical to its success..</p>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+                    <div class="icon"><img src="~/img/ec.svg" /></div>
+                    <h4 class="title">
+                        <a href="">
+                            Ecommerce Development
+
+                        </a>
+                    </h4>
+                    <p class="description">
+                        We provide CMS (Content Management System) and 
+                        e-Commerce development like Shopify, DotNetNuke, WordPress, Magento, and custom Development.
+
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon"><img src="~/img/ss.svg" /></div>
+                    <h4 class="title">
+                        <a href="">
+                            Mobile App Development
+                        </a>
+                    </h4>
+                    <p class="description">With a transparent development plan, we will code your 
+                        ideas and make them into reality for IOS, Android, and cross-platform apps</p>
+                </div>
+            </div>
+
+            <div class="  col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+                    <div class="icon"><img src="~/img/tt.svg" /></div>
+                    <h4 class="title">
+                        <a href="">
+                            Trending Technologies
+                        </a>
+                    </h4>
+                    <p class="description">Standards in web development changes faster than they can be implemented. 
+                        To stay one step ahead, we focus on trends, new techniques, and approaches.</p>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+</section><!-- End Featured Services Section -->
 <!-- ======= About Section ======= -->
 <section id="about" class="about section-bg">
     <div class="container" data-aos="fade-up">
@@ -34,17 +130,17 @@
             </p>
         </div>
 
-        <div class="mt-4">
-            @* <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
+        <div style="gap: 56px;" class="d-flex gap-6">
+            <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                 <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            </div> *@
-            <div class="pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+            </div>
+            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
                 <h3>
                     Big Ideas, creative people, new technologies
                     .
                 </h3>
                 <p class="fst-italic">
-                    A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range
+                    A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range 
                     of professional services such as Digital transformation, web design, web development, mobile app development,
                     search engine optimization (SEO), e-commerce solutions, UI/UX design, pay-per-click advertising (PPC),
                     social media marketing, video production, content creation, email marketing, and marketing automation.
@@ -56,11 +152,9 @@
                             <h5>
                                 Streamlined Project Management
                             </h5>
-                            <p>
-                                You want results. We've found that the best way to get them is to do research upfront -
+                            <p>You want results. We've found that the best way to get them is to do research upfront - 
                                 about your business, your competitors
-                                , your target market, and the psychographics of your customers.
-                            </p>
+                                , your target market, and the psychographics of your customers.</p>
                         </div>
                     </li>
                     <li>
@@ -69,10 +163,8 @@
                             <h5>
                                 A Dedicated Team of Experts
                             </h5>
-                            <p>
-                                Because our customers expect the best, we employ only the best people. Our rigorous qualification
-                                process ensures that we employ experienced and highly skilled professionals.
-                            </p>
+                            <p>Because our customers expect the best, we employ only the best people. Our rigorous qualification 
+                                process ensures that we employ experienced and highly skilled professionals.</p>
                         </div>
                     </li>
                 </ul>
@@ -136,12 +228,17 @@
                 </div>
             </div>
 
-
+          
 
         </div>
 
     </div>
 </section><!-- End Services Section -->
+
+
+
+
+ 
 
 
 <script src="~/assets/vendor/purecounter/purecounter_vanilla.js"></script>
