--- a/ALTC-Site/Views/Shared/_Layout.cshtml
+++ b/ALTC-Site/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-US">
+<html lang="ar-eg">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/css/components.css">
     <link rel="stylesheet" href="~/css/icons.css">
     <link rel="stylesheet" href="~/css/responsee.css">
+    <link rel="stylesheet" href="~/css/social_media_icons.css">
+
     <link rel="stylesheet" href="~/owl-carousel/owl.carousel.css">
     <link rel="stylesheet" href="~/owl-carousel/owl.theme.css">
     <link rel="stylesheet" href="~/css/lightcase.css">
@@ -53,6 +55,34 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,400,600,900&subset=latin-ext" rel="stylesheet">
     <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="~/js/jquery-ui.min.js"></script>
+
+
+    <script>
+
+
+        function toggleDirection(language) {
+            if (language === 'ar') {
+                direction = 'ltr';
+            } else if (language === 'eng') {
+                direction = 'rtl';
+            }
+
+            console.log(language);
+            console.log(direction);
+
+                    localStorage.setItem('direction', direction);
+            // Reload the page
+            location.reload();
+            
+            // Check local storage for direction on page load
+        let storedDirection = localStorage.getItem('direction');
+        if (storedDirection) {
+            direction = storedDirection;
+        }
+        }
+
+       
+    </script>
 </head>
 
 <body class="size-1140">
@@ -61,63 +91,139 @@
         <!-- HEADER -->
         <header role="banner" class="position-absolute margin-top-30 margin-m-top-0 margin-s-top-0">
             <!-- Top Navigation -->
-            <nav class="background-transparent background-transparent-hightlight full-width sticky">
-                <div class="s-12 l-2">
-                    <a href="index.html" class="logo">
-                        <!-- Logo version before sticky nav -->
-                        <img class="logo-before" src="img/logo-dark.png" alt="">
-                        <!-- Logo version after sticky nav -->
-                        <img class="logo-after" src="img/logo-dark.png" alt="">
-                    </a>
-                </div>
-                <div class="s-12 l-10">
-                    <div class="top-nav right">
+            <nav id="nav" class="background-transparent background-transparent-hightlight full-width sticky padding-top-15 ">
+                    <div class=" d-flex">
 
-                        <ul class="right chevron">
-                            <li><a style=" color:red" class="nav-link scrollto" asp-area="Admin" asp-controller="Home" asp-action="">Dashboard</a></li>
-                            <li><a asp-action="index" asp-controller="Home">Home</a></li>
-                            <li><a asp-action="index" asp-controller="About">About Us</a></li>
-                            <li><a  asp-controller="Contact" asp-action="index">Contact</a></li>
+
+
+    <div style="transform: translateY(0px);" class="s-12 l-10">
+                    <div class="top-nav  ">
+
+                            <ul style="display: flex; align-items: center;" class=" chevron">
+
+                                @{
+                                    string direction = "rtl"; // You can replace this with logic to determine the actual text direction
+                                }
+                                @if (direction == "rtl")
+                                {
+                                    <li class="lang">
+                                        <div class="en">
+                                            <img class="" src="img/saudiflag.png" alt="">
+                                        </div>
+                                        <div onclick="toggleDirection('ar')" href="">العربية</div>
+                                    </li>
+                                }
+                                @if (direction == "ltr")
+                                {
+                                    <li class="lang">
+                                        <div class="en">
+                                            <img class="" src="img/united-kingdom.png" alt="">
+                                        </div>
+                                        <div onclick="toggleDirection('eng')" href="">Eng</div>
+                                    </li>
+                                }
+
+
+
+
+
+
+
+
+
+
+
+
+
+                               
+
+                                @if (direction == "rtl")
+                                {
+                                    <li><a style=" color:red" class="nav-link scrollto" asp-area="Admin" asp-controller="Home" asp-action="">Dashboard</a></li>
+                                    <li><a asp-action="index" asp-controller="Home">Home</a></li>
+                                    <li><a asp-action="index" asp-controller="About">About Us</a></li>
+                                    <li><a asp-controller="Contact" asp-action="index">Contact</a></li>
+                                }
+                                else if (direction == "ltr")
+                                {
+                               <li><a style=" color:red" class="nav-link scrollto" asp-area="Admin" asp-controller="Home" asp-action=""> لوحة التحكم </a></li>
+                            <li><a asp-action="index" asp-controller="Home">الرئيسية</a></li>
+                            <li><a asp-action="index" asp-controller="About">عننا</a></li>
+                                <li><a asp-controller="Contact" asp-action="index">تواصل</a></li>
+                                }
+                            
+                                
+                              
+                               
+
                         </ul>
                     </div>
                 </div>
+                    <div style="transform: translateY(-15px); display: flex; align-items: center;" class="s-12 l-2">
+                    <a href="index.html" class="logo">
+                      @*   <!-- Logo version before sticky nav -->
+                        <img class="logo-before" src="img/logo-dark.png" alt="">
+                        
+
+                        <!-- Logo version after sticky nav --> *@
+                        <img style="width:70%" class="logo-before" src="~/assets/img/altc-logo2.png" alt="">
+                        <img style="width:70%" class="logo-after" src="~/assets/img/altc-logo2.png" alt="">
+                    </a>
+                </div>
+                </div>
+
+
             </nav>
         </header>
         @RenderBody()
         <!-- FOOTER -->
         <footer>
             <!-- Contact Us -->
-            <div class="background-dark padding text-center footer-social">
-                <a class="margin-right-10" target="_blank" href="https://www.facebook.com"><i class="icon-facebook_circle text-size-30"></i> <span class="text-strong text-white hide-s hide-m">FACEBOOK</span></a>
-                <a class="margin-right-10" target="_blank" href="https://www.twitter.com"><i class="icon-twitter_circle text-size-30"></i> <span class="text-strong text-white hide-s hide-m">TWITTER</span></a>
-                <a class="margin-right-10" target="_blank" href="https://www.instagram.com"><i class="icon-instagram_circle text-size-30"></i> <span class="text-strong text-white hide-s hide-m">INSTAGRAM</span></a>
-                <a target="_blank" href="https://www.linkedin.com"><i class="icon-linked_in_circle text-size-30"></i> <span class="text-strong text-white hide-s hide-m">LINKEDIN</span></a>
+      
+
+            <div class="social-icons background-dark">
+                <a class="social-icon twitter-icon" href="#">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a class="social-icon dribbble-icon" href="#">
+                    <i class="fab fa-dribbble"></i>
+                </a>
+                <a class="social-icon facebook-icon" href="#">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a class="social-icon instagram-icon" href="#">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a class="social-icon github-icon" href="#">
+                    <i class="fab fa-github"></i>
+                </a>
             </div>
 
-            <!-- Main Footer -->
+
+            <!-- التذييل الرئيسي -->
             <section class="section-small-padding text-center background-dark full-width">
                 <div class="line">
                     <div class="margin">
-                        <!-- Collumn 1 -->
+                        <!-- العمود 1 -->
                         <div class="s-12 m-12 l-4 margin-m-bottom-30">
-                            <h3 class="text-size-16">Company Address</h3>
+                            <h3 class="text-size-16">عنوان الشركة</h3>
                             <p class="text-size-14">
-                                Responsive Street 7<br>
-                                London - United Kingdom<br>
-                                Europe
+                                شارع الحلبسة 5 <br>
+                                لندن - المملكة المتحدة<br>
+                                أوروبا
                             </p>
                         </div>
-                        <!-- Collumn 2 -->
+                        <!-- العمود 2 -->
                         <div class="s-12 m-12 l-4 margin-m-bottom-30">
-                            <h3 class="text-size-16">E-mail</h3>
+                            <h3 class="text-size-16">البريد الإلكتروني</h3>
                             <p class="text-size-14">
                                 contact@sampledomain.com<br>
                                 office@sampledomain.com
                             </p>
                         </div>
-                        <!-- Collumn 3 -->
+                        <!-- العمود 3 -->
                         <div class="s-12 m-12 l-4 ">
-                            <h3 class="text-size-16">Phone Numbers</h3>
+                            <h3 class="text-size-16">أرقام الهواتف</h3>
                             <p class="text-size-14">
                                 0800 4521 800 50<br>
                                 0450 5896 625 16<br>
@@ -129,15 +235,32 @@
             </section>
             <hr class="break margin-top-bottom-0" style="border-color: rgba(0, 0, 0, 0.80);">
 
-            <!-- Bottom Footer -->
+            <!-- التذييل السفلي -->
             <section class="padding background-dark full-width">
                 <div class="text-center">
-                    <p class="text-size-12">Copyright 2019, Vision Design - graphic zoo</p>
-                    <p class="text-size-12">All images is purchased from Bigstock. Do not use the images in your website.</p>
+                    <p class="text-size-12">حقوق النشر 2019، تصميم الرؤية - حديقة الرسومات</p>
+                    <p class="text-size-12">جميع الصور مشتراة من Bigstock. لا تستخدم الصور في موقع الويب الخاص بك.</p>
                 </div>
             </section>
         </footer>
+
     </div>
+    @* <script>
+        var direction = "ltr"; // Declare direction in the global scope
+
+        function toggleDirection(language) {
+            if (language === 'ar') {
+                direction = 'rtl';
+            } else {
+                direction = 'ltr';
+            }
+
+            console.log(language);
+
+            // Optionally set the direction for the entire document
+            document.body.dir = direction;
+        }
+    </script> *@
     <script type="text/javascript" src="~/js/responsee.js"></script>
     <script type="text/javascript" src="~/js/contact.js"></script>
 
@@ -158,6 +281,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://kit.fontawesome.com/1c2c2462bf.js" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
