--- a/ALTC-Site/Views/Home/Index.cshtml
+++ b/ALTC-Site/Views/Home/Index.cshtml
@@ -20,14 +20,15 @@
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-        <h1> Arab Leading Technology <span> ALTC</span></h1>
-        <h2>Website and App development solution for transforming and innovating businesses.</h2>
-        <div class="d-flex">
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+        <h1> التكنولوجيا العربية الرائدة <span> ALTC</span></h1>
+        <h2>حل تطوير مواقع الويب والتطبيقات لتحويل الأعمال التجارية وابتكارها.</h2>
+        <daiv class="d-flex justify-content-center">
+            <a href="/Contact" class="btn-get-started scrollto">ابدا</a>
         </div>
     </div>
 </section><!-- End Hero -->
+
+
 
 <footer id="footer">
 
@@ -36,11 +37,11 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <h4>
-                        Big Ideas, Creative people, New technologies
+                        أفكار كبيرة، أشخاص مبدعون، تقنيات جديدة
                     </h4>
                 
                     <form action="" method="post">
-                        <input type="email" name="email"><input type="submit" value="Subscribe">
+                        <input type="email" name="email"><input type="submit" value="اشترك">
                     </form>
                 </div>
             </div>
@@ -49,227 +50,138 @@
 
 
 </footer><!-- End Footer -->
-<!-- ======= Featured Services Section ======= -->
-<section id="featured-services" class="featured-services">
-    <div class="container" data-aos="fade-up">
 
-        <div class="row">
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <div class="icon"><img src="~/img/dev.svg" /></i></div>
-                    <h4 class="title">
-                        <a href="">
-                            Service
-                            Web Development
-                        </a>
-                    </h4>
-                    <p class="description">Web development is the fundamental (back-end) coding of 
-                        your application or your business website, and it is critical to its success..</p>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-                    <div class="icon"><img src="~/img/ec.svg" /></div>
-                    <h4 class="title">
-                        <a href="">
-                            Ecommerce Development
-
-                        </a>
-                    </h4>
-                    <p class="description">
-                        We provide CMS (Content Management System) and 
-                        e-Commerce development like Shopify, DotNetNuke, WordPress, Magento, and custom Development.
-
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-                    <div class="icon"><img src="~/img/ss.svg" /></div>
-                    <h4 class="title">
-                        <a href="">
-                            Mobile App Development
-                        </a>
-                    </h4>
-                    <p class="description">With a transparent development plan, we will code your 
-                        ideas and make them into reality for IOS, Android, and cross-platform apps</p>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-                    <div class="icon"><img src="~/img/tt.svg" /></div>
-                    <h4 class="title">
-                        <a href="">
-                            Trending Technologies
-                        </a>
-                    </h4>
-                    <p class="description">Standards in web development changes faster than they can be implemented. 
-                        To stay one step ahead, we focus on trends, new techniques, and approaches.</p>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-</section><!-- End Featured Services Section -->
-<!-- ======= About Section ======= -->
+<!-- ======= قسم حول ======= -->
 <section id="about" class="about section-bg">
     <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-            <h2>Bio</h2>
-            <h3>Find Out More <span> ALTC </span></h3>
+            <h2>السيرة الذاتية</h2>
+            <h3>اعرف المزيد <span>عن ALTC</span></h3>
             <p>
-                Hello! We are Arab Leading Technology
-                Top-rated Digital Marketing, Web, And Mobile App Development Company.
+                مرحبًا! نحن Arab Leading Technology
+                شركة رائدة في مجال التسويق الرقمي، وتطوير الويب، وتطوير تطبيقات الهواتف المحمولة.
             </p>
         </div>
 
-        <div class="row">
+        <div style="gap: 56px;" class="d-flex flex-row-reverse gap-6">
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                 <img src="assets/img/about.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
                 <h3>
-                    Big Ideas, creative people, new technologies
-                    .
+                    أفكار كبيرة، أشخاص مبدعين، تقنيات جديدة
                 </h3>
                 <p class="fst-italic">
-                    A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range 
-                    of professional services such as Digital transformation, web design, web development, mobile app development,
-                    search engine optimization (SEO), e-commerce solutions, UI/UX design, pay-per-click advertising (PPC),
-                    social media marketing, video production, content creation, email marketing, and marketing automation.
+                    وكالة رائدة في مجال حلول الويب الشاملة والتسويق الرقمي، نقدم مجموعة شاملة
+                    من الخدمات المهنية مثل التحول الرقمي، تصميم الويب، تطوير الويب، تطوير تطبيقات الهواتف المحمولة،
+                    تحسين محركات البحث (SEO)، حلول التجارة الإلكترونية، تصميم واجهة المستخدم/تجربة المستخدم (UI/UX)،
+                    الإعلان بالدفع للنقر (PPC)، التسويق عبر وسائل التواصل الاجتماعي، إنتاج الفيديو، إنشاء المحتوى،
+                    التسويق عبر البريد الإلكتروني، وتسويق الآلي.
                 </p>
                 <ul>
                     <li>
                         <i class="bx bx-store-alt"></i>
                         <div>
                             <h5>
-                                Streamlined Project Management
+                                إدارة المشاريع بشكل مبسط
                             </h5>
-                            <p>You want results. We've found that the best way to get them is to do research upfront - 
-                                about your business, your competitors
-                                , your target market, and the psychographics of your customers.</p>
+                            <p>
+                                تريد النتائج. لقد وجدنا أن أفضل طريقة للحصول عليها هي إجراء البحث مسبقًا -
+                                حول عملك، منافسيك
+                                ، سوقك المستهدف، والسمات النفسية لعملائك.
+                            </p>
                         </div>
                     </li>
                     <li>
                         <i class="bx bx-images"></i>
                         <div>
                             <h5>
-                                A Dedicated Team of Experts
+                                فريق متخصص من الخبراء
                             </h5>
-                            <p>Because our customers expect the best, we employ only the best people. Our rigorous qualification 
-                                process ensures that we employ experienced and highly skilled professionals.</p>
+                            <p>
+                                لأن عملائنا يتوقعون الأفضل، نستخدم فقط أفضل الأشخاص. يضمن عملية التأهيل الصارمة لدينا
+                                أن نوظف محترفين ذوي خبرة ومهارات عالية.
+                            </p>
                         </div>
                     </li>
                 </ul>
                 <p>
-                    Your company's IT systems are critical to its success. We are confident that we can provide you with quality Web & Mobile Solutions, Digital Content,
-                    and Digital Marketing services in ALTC that will benefit your business.
+                    أنظمة تكنولوجيا المعلومات في شركتك هي حاسمة لنجاحها. نحن واثقون من أننا يمكننا توفير حلول ويب وجوال
+                    ومحتوى رقمي عالية الجودة، وخدمات تسويق رقمي في ALTC ستعود بالفائدة على عملك.
                 </p>
             </div>
         </div>
 
     </div>
-</section><!-- End About Section -->
-<!-- ======= Services Section ======= -->
+</section><!-- نهاية قسم حول -->
+@* //////////////////// *@
+
+
+</section><!-- نهاية قسم الخدمات -->
+<!-- ======= قسم الخدمات ======= -->
 <section id="services" class="services">
     <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-            <h2>Services</h2>
-            <h3>Check our <span>Services</span></h3>
-            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+            <h2>الخدمات</h2>
+            <h3>تحقق من <span>خدماتنا</span></h3>
+            <p>
+                يمكن أن نقول الذي في الأوقات الحالية يتسنى لنا تجربته. الوقت للاستمتاع والابتكار
+                واكتشاف الفرص الجديدة.
+            </p>
         </div>
 
         <div class="row">
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box">
                     <div class="icon"><img src="~/img/startup.png" /> </div>
-                    <h4><a href="">Digital Transformation</a></h4>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    <h4><a href="">التحول الرقمي</a></h4>
+                    <p>المتعة والتلفيق والابتزاز الذين يحبذونهم أولئك الذين يشعرون بالألم والذين يكرهونهم</p>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box">
                     <div class="icon"><img src="~/img/smo.png" /></div>
-                    <h4><a href="">Digital Marketing</a></h4>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                    <h4><a href="">التسويق الرقمي</a></h4>
+                    <p>المستغرب في أخذ الحق في النقد في مرحلة تسلية تظهر فيها التعديات</p>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
                 <div class="icon-box">
                     <div class="icon"><img src="~/img/m3.png" /></div>
-                    <h4><a href="">Web Solutions</a></h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                    <h4><a href="">حلول الويب</a></h4>
+                    <p>الذين لا يستثنون سوى الذين يتولون مسؤولياتهم ويكونون متهمين بأداء أعمالهم</p>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box">
                     <div class="icon"><img src="~/img/ap.png" /></div>
-                    <h4><a href="">Mobile Solutions</a></h4>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                    <h4><a href="">حلول الهواتف المحمولة</a></h4>
+                    <p>في مرحلة تجميل الواقع والاتهام والكراهية تلك التي تستحق المراقبة والاستغناء</p>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box">
                     <div class="icon"><img src="~/img/c.png" /></div>
-                    <h4><a href="">Digital Content</a></h4>
-                    <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                    <h4><a href="">المحتوى الرقمي</a></h4>
+                    <p>تلك التي يتعين على الإنسان اتخاذها. لا يمكن أن تكون مطمئنة ومكرهة ومتجهة إلى الجواب</p>
                 </div>
             </div>
 
-          
-
         </div>
 
     </div>
-</section><!-- End Services Section -->
-<!-- ======= Team Section ======= -->
-<section id="team" class="team section-bg">
-    <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-            <h2>Team</h2>
-            <h3>Our Hardworking <span>Team</span></h3>
-            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
-        </div>
-
-        <div class="row">
-           
-
-                <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-                    <div class="member">
-                        <div class="member-img">
-                            <img src="~/assets/img/team//team-1.jpg" class="img-fluid" alt="">
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                        <div class="member-info">
-                            <h4>Mohmed Mostafa</h4>
-                            <span>JobTitle</span>
-                        </div>
-                    </div>
-                </div>
+</section><!-- نهاية قسم الخدمات -->
 
 
 
-        </div>
 
-    </div>
-</section><!-- End Team Section -->
+ 
 
 
 <script src="~/assets/vendor/purecounter/purecounter_vanilla.js"></script>
