--- a/ALTC-Site/wwwroot/assets/css/style.css
+++ b/ALTC-Site/wwwroot/assets/css/style.css
@@ -605,7 +605,7 @@ section {
   color: #106eea;
   display: inline-block;
   text-transform: uppercase;
-  border-radius: 50px;
+  border-radius: 50px !important;
 }
 
 .section-title h3 {
@@ -688,27 +688,28 @@ section {
 # Featured Services
 --------------------------------------------------------------*/
 .featured-services .icon-box {
-  padding: 30px;
-  position: relative;
-  overflow: hidden;
-  background: red;
-  box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
-  transition: all 0.3s ease-in-out;
-  border-radius: 8px;
-  z-index: 1;
+    padding: 30px;
+    position: relative;
+    overflow: hidden;
+    background: red;
+    box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
+    transition: all 0.3s ease-in-out;
+    border-radius: 8px;
+    z-index: 1;
+    background: #fff !important;
 }
 
-.featured-services .icon-box::before {
-  content: "";
-  position: absolute;
-  background: #cbe0fb;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  top: 100%;
-  transition: all 0.3s;
-  z-index: -1;
-}
+    .featured-services .icon-box::before {
+        content: "";
+        position: absolute;
+        background: #cbe0fb;
+        left: 0;
+        right:0;
+        bottom: 0;
+        top: 100%;
+        transition: all 0.3s;
+        z-index: -1;
+    }
 
 .featured-services .icon-box:hover::before {
   background: #106eea;
@@ -1805,4 +1806,199 @@ section {
     text-align: center;
     padding: 2px 0;
   }
+}
+
+.featured-services .icon-box {
+    
+    /*background: #fff !important;*/
+}
+
+#contact_wrapper a {
+    /*color: aquamarine;*/
+}
+
+
+
+#contact_wrapper i,
+#contact_wrapper span {
+    transition: all 0.5s;
+    
+}
+
+/**/
+#contact_wrapper #facebook:hover i,
+#contact_wrapper #facebook:hover span {
+    color: #316FF6 !important;
+}
+
+#contact_wrapper #facebook:hover span {
+    color: #316FF6 !important;
+}
+/**/
+
+
+
+#contact_wrapper #twitter:hover i,
+#contact_wrapper #twitter:hover span {
+    color: #00acee !important;
+}
+
+#contact_wrapper #twitter:hover span {
+    color: #00acee !important;
+}
+
+/**/
+
+#contact_wrapper #instgram:hover i,
+#contact_wrapper #instgram:hover span {
+    color: #F5F8FA !important;
+}
+
+#contact_wrapper #instgram:hover span {
+    color: #F5F8FA !important;
+}
+
+/**/
+
+#contact_wrapper #linkedin:hover i,
+#contact_wrapper #linkedin:hover span {
+    color: #0077b5 !important;
+}
+
+#contact_wrapper #linkedin:hover span {
+    color: #0077b5 !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*#contact_wrapper #twitter:hover i,
+#contact_wrapper #twitter:hover span {
+    color: #1DA1F2;*/ /* Twitter blue color */
+/*}
+
+#contact_wrapper #instgram:hover i,
+#contact_wrapper #instgram:hover span {
+    color: #E1306C;*/ /* Instagram pink color */
+/*}
+
+#contact_wrapper #linkedin:hover i,
+#contact_wrapper #linkedin:hover span {
+    color: #0077B5;*/ /* LinkedIn blue color */
+/*}*/
+.c-icon {
+    width: 36px;
+    height: 36px;
+    fill: currentColor;
+    transition: .2s;
+}
+
+.c-link--facebook:hover {
+    color: #3b5998
+}
+
+.c-link--twitter:hover {
+    color: #55acee
+}
+
+.c-link--google:hover {
+    color: #dd4b39
+}
+
+.c-link--pinterest:hover {
+    color: #bd081c
+}
+
+.c-link--instagram:hover {
+    color: #833ab4
+}
+
+.c-link--linkedin:hover {
+    color: #fbe00f
+}
+
+.c-link--facebook:hover::after {
+    background: #3b5998
+}
+
+.c-link--twitter:hover::after {
+    background: #55acee
+}
+
+.c-link--google:hover::after {
+    background: #dd4b39
+}
+
+.c-link--pinterest:hover::after {
+    background: #bd081c
+}
+
+.c-link--instagram:hover::after {
+    background: #833ab4
+}
+
+.c-link--linkedin:hover::after {
+    background: #fbe00f
+}
+
+.c-link {
+    position: relative;
+    color: #bbb;
+}
+
+    .c-link:not(:last-of-type) {
+        margin-right: 15px;
+    }
+
+.c-tooltip::before,
+.c-tooltip::after {
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -10px);
+    opacity: 0;
+    transition: .2s;
+}
+
+.c-tooltip::before {
+    content: '';
+    bottom: calc(100% + 2px);
+    border: solid 5px transparent;
+    border-top-color: currentColor;
+}
+
+.c-tooltip::after {
+    content: attr(aria-label);
+    bottom: calc(100% + 12px);
+    padding: .61em .93em;
+    font-size: .875rem;
+    color: white;
+    border-radius: 3px;
+}
+
+.c-tooltip:hover::before,
+.c-tooltip:hover::after {
+    opacity: 1;
+    transform: translate(-50%);
+}
+
+.pens-link-container {
+    flex-basis: 100%;
+    font-size: .9rem;
+    text-align: center;
+}
+
+.pens-link {
+    margin-bottom: 0;
+    background: white;
+    box-shadow: 0 4px 18px rgba(0, 0, 0, .1);
+    border: none;
 }
